@@ -3,6 +3,8 @@
 
                 Version 0.6-trunk
 
+# (r1323)
+ * fix: in --offset mode, avoiding probing for external loader programs.
 # (r1319)
  * --verbose-load option for verbose file loading.
 # (r1317,r1321)
